[package]
name = "exo_image"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
chrono = "0.4.24"
exolvl = { git = "https://github.com/skycloudd/exolvl", version = "0.2.0" }
flate2 = "1.0.25"
image = "0.24.6"
uuid = { version = "1.3.0", features = ["v4"] }
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib"]
